[gd_scene load_steps=6 format=3 uid="uid://bce0tw3gf05xp"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_73mmt"]
[ext_resource type="Texture2D" uid="uid://csitil44ua4ck" path="res://assets/menu/background.png" id="2_nilrt"]
[ext_resource type="Theme" uid="uid://dewp33mtaave7" path="res://assets/font/menu-1.tres" id="3_1843n"]
[ext_resource type="Theme" uid="uid://c3wy3kpvtyhlf" path="res://assets/font/menu-2.tres" id="4_jv7st"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmtvw"]
content_margin_left = 19.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_73mmt")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Oops!"
initial_position = 2
size = Vector2i(470, 106)
unresizable = true
always_on_top = true
popup_window = true
ok_button_text = "Close game"
dialog_text = "It looks like you're using an un-supported resolution,
please use a minimum of 1280x720 for the best experience"
dialog_autowrap = true
cancel_button_text = "Ignore"

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.830335, 0.830335, 0.830335, 1)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_nilrt")
expand_mode = 1
stretch_mode = 1

[node name="Menu Elements" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.032
anchor_top = 0.06
anchor_right = 0.155
anchor_bottom = 1.24
offset_left = 61.0
offset_top = 64.0
offset_right = 1681.0
offset_bottom = 888.0

[node name="Title" type="Label" parent="Menu Elements"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("3_1843n")
text = "Five Nights At Dog School"

[node name="Menu Options" type="VBoxContainer" parent="Menu Elements"]
layout_mode = 2
size_flags_vertical = 8

[node name="Play" type="Button" parent="Menu Elements/Menu Options"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_jv7st")
theme_override_styles/hover = SubResource("StyleBoxFlat_rmtvw")
action_mode = 0
text = "Play"
flat = true
alignment = 0

[node name="Settings" type="Button" parent="Menu Elements/Menu Options"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_jv7st")
theme_override_styles/hover = SubResource("StyleBoxFlat_rmtvw")
action_mode = 0
text = "Settings
"
flat = true
alignment = 0

[node name="Credits" type="Button" parent="Menu Elements/Menu Options"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_jv7st")
theme_override_styles/hover = SubResource("StyleBoxFlat_rmtvw")
action_mode = 0
text = "Credits"
flat = true
alignment = 0

[node name="Quit" type="Button" parent="Menu Elements/Menu Options"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_jv7st")
theme_override_styles/hover = SubResource("StyleBoxFlat_rmtvw")
action_mode = 0
text = "Quit"
flat = true
alignment = 0

[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="pressed" from="Menu Elements/Menu Options/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menu Elements/Menu Options/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu Elements/Menu Options/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Menu Elements/Menu Options/Quit" to="." method="_on_quit_pressed"]
